--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "author": "Terraform Labs PTE.LTD",
+  "author": "OLLO Station",
   "license": "Apache-2.0",
-  "repository": "git://github:terra-money/wallet-provider",
-  "bugs": "https://github.com/terra-money/wallet-provider/issues",
-  "homepage": "https://github.com/terra-money/wallet-provider/tree/main/packages/src/@terra-money/use-wallet",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OllO-Station/use-wallet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/OllO-Station/use-wallet.git/issues"
+  },
+  "homepage": "https://github.com/OllO-Station/use-wallet.git",
   "engines": {
     "node": ">=16"
   },
@@ -12,10 +17,10 @@
     "access": "public"
   },
   "typings": "index.d.ts",
-  "name": "@terra-money/use-wallet",
-  "version": "4.0.1",
+  "name": "@nestwallet/use-wallet",
+  "version": "1.2.0",
   "dependencies": {
-    "@terra-money/wallet-types": "^4.0.1",
+    "@nestwallet/wallet-types": "^4.0.1",
     "@terra-money/feather.js": "^1.0.0-beta.4"
   },
   "main": "./_commonjs/index.js",
