--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "name": "@nestwallet/use-wallet",
   "version": "1.2.0",
   "dependencies": {
-    "@nestwallet/wallet-types": "^4.0.1",
+    "@nestwallet/wallet-types": "1.1.0",
     "@terra-money/feather.js": "^1.0.0-beta.4"
   },
   "main": "./_commonjs/index.js",
